# opengl-uni-course

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  run.sh
.ccls-cache/@@home@duckyshine04@Documents@projects@cpp-projects@opengl-uni-course/: @usr@include@GL@freeglut_std.h.blob  @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@GL@glu.h.blob  @usr@include@GL@glut.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@12@backward@binders.h.blob  @usr@include@c++@12@bits@alloc_traits.h.blob  @usr@include@c++@12@bits@allocator.h.blob  @usr@include@c++@12@bits@basic_ios.h.blob  @usr@include@c++@12@bits@basic_ios.tcc.blob  @usr@include@c++@12@bits@basic_string.h.blob  @usr@include@c++@12@bits@basic_string.tcc.blob  @usr@include@c++@12@bits@char_traits.h.blob  @usr@include@c++@12@bits@charconv.h.blob  @usr@include@c++@12@bits@concept_check.h.blob  @usr@include@c++@12@bits@cpp_type_traits.h.blob  @usr@include@c++@12@bits@cxxabi_forced.h.blob  @usr@include@c++@12@bits@cxxabi_init_exception.h.blob  @usr@include@c++@12@bits@exception.h.blob  @usr@include@c++@12@bits@exception_defines.h.blob  @usr@include@c++@12@bits@exception_ptr.h.blob  @usr@include@c++@12@bits@functexcept.h.blob  @usr@include@c++@12@bits@functional_hash.h.blob  @usr@include@c++@12@bits@hash_bytes.h.blob  @usr@include@c++@12@bits@invoke.h.blob  @usr@include@c++@12@bits@ios_base.h.blob  (+167 more)
include/: shapes.h
src/: main.cpp  shapes.cpp
(+1 files in other folders)
